--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "dependencies": {
-    "angular2": "2.0.0-beta.0",
+    "angular2": "2.0.0-beta.1",
     "es6-promise": "3.0.2",
     "es6-shim": "0.33.13",
     "es7-reflect-metadata": "^1.2.0",
-    "ionic-framework": "2.0.0-alpha.45",
+    "ionic-framework": "2.0.0-alpha.51",
+    "ionicons":"3.0.0-alpha.3",
     "lodash-es": "^3.10.1",
     "moment": "^2.10.6",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
-    "zone.js": "0.5.10"
+    "zone.js": "0.5.10",
+    "@ngrx/store": "^1.2.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^0.15.9",
